<?xml version="1.0"?>
<package format="3">
  <name>emojicloud_plugin</name>
  <version>0.0.0</version>
  <description>The emojicloud_plugin package</description>

  <maintainer email="leander@blackcoffeerobotics.com">leander</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pluginlib</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
